--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <div class="col-flex">
                 <div class="text-position">
-                    <div class="Dental-About pad-20">
+                    <div class="Dental-About ">
                         <h3 class="head-font-size">Who We Are</h3>
                         <p class="color-pink">WELCOME TO PRODENTAL CLINIC!</p>
                         <h4 class="head-font-size">Welcome to a Family ProDental Clinic</h4>
