--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="text-position">
-                    <div class="Dental-About pad-20">
+                    <div class="Dental-About ">
                         <img src="img/bg-1.jpg" alt="" class="img-responsive">
                     </div>
                 </div>
