--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
             <div class="col-flex">
                 <div class="text-position">
-                    <div class="heading pad-20">
+                    <div class="heading ">
                         <h5 class="head-font-size">What We Do</h5>
 
 
