--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <div class="col-flex">
                 <div class="text-position">
                     <div class="Dental-contact">
-                        <h1>Contact</h1>
+                          <h1 class="head-font-size">Contact</h1>
                         <p>Address</p>
                         <p>B-4/52, Azad Apartment,<br> Near Hauz Khas Bus Terminal, Hauz Khas Delhi</p>
 
@@ -405,7 +405,7 @@
                 </div>
                 <div class="text-position">
                     <div class="Dental-contact">
-                        <h1>Talk To Us</h1>
+                        <h1 class="head-font-size">Talk To Us</h1>
                         <p>Phone</p>
                         <ul>
                             <li>+909 888 908-9</li>
